--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Alternative to ES6 Symbol",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha -w"
+    "test": "mocha -w",
+    "karma-test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,10 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.1",
     "mocha": "^5.1.1"
   }
 }
